--- a/classes/Net/SSH/Multi/ChannelProxy.html
+++ b/classes/Net/SSH/Multi/ChannelProxy.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class='description'>
                   
-                  <p>Instantiates a new channel proxy with the given <code>on_confirm</code>
+                  <p>Instantiates a new channel proxy with the given <tt>on_confirm</tt>
                   callback.</p>
                 </div>
                 <div class='source'>
@@ -124,7 +124,7 @@
                 <div class='description'>
                   
                   <p>Instructs the proxy to delegate all further actions to the given
-                  <code>channel</code> (which must be an instance of
+                  <tt>channel</tt> (which must be an instance of
                   Net::SSH::Connection::Channel). All recorded actions are immediately
                   replayed, in order, against the delegate channel.</p>
                 </div>
