--- a/classes/Net/SSH/Multi/ServerList.html
+++ b/classes/Net/SSH/Multi/ServerList.html
@@ -136,7 +136,7 @@
                   
                   <p>Adds an array (or otherwise Enumerable list) of servers to this list, by
                   calling <a href="ServerList.html#method-i-add">add</a> for each argument.
-                  Returns <code>self</code>.</p>
+                  Returns <tt>self</tt>.</p>
                 </div>
                 <div class='source'>
                   <a class='source-toggle' href='#' onclick="toggleCode('method-i-concat-source'); return false">
