--- a/classes/Net/SSH/Multi/Subsession.html
+++ b/classes/Net/SSH/Multi/Subsession.html
@@ -108,8 +108,8 @@
                 </div>
                 <div class='description'>
                   
-                  <p>Create a new subsession of the given <code>master</code> session, that
-                  operates on the given <code>server_list</code>.</p>
+                  <p>Create a new subsession of the given <tt>master</tt> session, that operates
+                  on the given <tt>server_list</tt>.</p>
                 </div>
                 <div class='source'>
                   <a class='source-toggle' href='#' onclick="toggleCode('method-c-new-source'); return false">
