--- a/fr_method_index.html
+++ b/fr_method_index.html
@@ -4502,27 +4502,27 @@
       </form>
       <ol class='methods' id='search-results' style='display: none'></ol>
       <ol class='methods' id='index-entries'>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#method-callback"><span class="method_name">#callback</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#method-channels"><span class="method_name">#channels</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-concurrent_connections"><span class="method_name">#concurrent_connections</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#method-connection"><span class="method_name">#connection</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-default_gateway"><span class="method_name">#default_gateway</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-default_user"><span class="method_name">#default_user</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#method-gateway"><span class="method_name">#gateway</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-groups"><span class="method_name">#groups</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#method-host"><span class="method_name">#host</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#method-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Subsession.html#method-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::Subsession)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#method-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/ChannelProxy.html#method-on_confirm"><span class="method_name">#on_confirm</span> <span class="module_name">(Net::SSH::Multi::ChannelProxy)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-on_error"><span class="method_name">#on_error</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#method-options"><span class="method_name">#options</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#method-options"><span class="method_name">#options</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#method-properties"><span class="method_name">#properties</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/PendingConnection.html#method-server"><span class="method_name">#server</span> <span class="module_name">(Net::SSH::Multi::PendingConnection)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#method-server_list"><span class="method_name">#server_list</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Subsession.html#method-servers"><span class="method_name">#servers</span> <span class="module_name">(Net::SSH::Multi::Subsession)</span></a></li>
-        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#method-user"><span class="method_name">#user</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#attribute-i-callback"><span class="method_name">#callback</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#attribute-i-channels"><span class="method_name">#channels</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-concurrent_connections"><span class="method_name">#concurrent_connections</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#attribute-i-connection"><span class="method_name">#connection</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-default_gateway"><span class="method_name">#default_gateway</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-default_user"><span class="method_name">#default_user</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#attribute-i-gateway"><span class="method_name">#gateway</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-groups"><span class="method_name">#groups</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#attribute-i-host"><span class="method_name">#host</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#attribute-i-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Subsession.html#attribute-i-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::Subsession)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#attribute-i-master"><span class="method_name">#master</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/ChannelProxy.html#attribute-i-on_confirm"><span class="method_name">#on_confirm</span> <span class="module_name">(Net::SSH::Multi::ChannelProxy)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-on_error"><span class="method_name">#on_error</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#attribute-i-options"><span class="method_name">#options</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/DynamicServer.html#attribute-i-options"><span class="method_name">#options</span> <span class="module_name">(Net::SSH::Multi::DynamicServer)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#attribute-i-properties"><span class="method_name">#properties</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/PendingConnection.html#attribute-i-server"><span class="method_name">#server</span> <span class="module_name">(Net::SSH::Multi::PendingConnection)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Session.html#attribute-i-server_list"><span class="method_name">#server_list</span> <span class="module_name">(Net::SSH::Multi::Session)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Subsession.html#attribute-i-servers"><span class="method_name">#servers</span> <span class="module_name">(Net::SSH::Multi::Subsession)</span></a></li>
+        <li><a target="docwin" href="classes/Net/SSH/Multi/Server.html#attribute-i-user"><span class="method_name">#user</span> <span class="module_name">(Net::SSH::Multi::Server)</span></a></li>
         <li><a target="docwin" href="classes/Net/SSH/Multi/ChannelProxy.html#method-c-new"><span class="method_name">::new</span> <span class="module_name">(Net::SSH::Multi::ChannelProxy)</span></a></li>
         <li><a target="docwin" href="classes/Net/SSH/Multi/Channel.html#method-c-new"><span class="method_name">::new</span> <span class="module_name">(Net::SSH::Multi::Channel)</span></a></li>
         <li><a target="docwin" href="classes/Net/SSH/Multi/Subsession.html#method-c-new"><span class="method_name">::new</span> <span class="module_name">(Net::SSH::Multi::Subsession)</span></a></li>
